# msword-properties-generator

./: .coveragerc  .gitignore  .gitpod.Dockerfile  GenerateDrobboxToken.py  GenerateOfferDocuments.py  LICENSE  README.md  docx_utils.py  dropbox_utils.py  encrypt_and_populate_provider_db.py  generate_offer_documents.py  mail_utils.py  offers_provider.db  pdf_utils.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  util_config.py  utils_db.py  utils_docx.py  utils_dropbox.py  utils_mail.py  utils_pdf.py  utils_xlsx.py  xlsx_utils.py
docs/: CNAME  index.html
env/: prod.properties
output/: Recht om te vertegenwoordigen - Johan Tre BV - VRT - Scrum Master Dataplatform (freelance) - VRT342719.docx  Recht om te vertegenwoordigen - Johan Tré BV - AGENTSCHAP BINNENLANDS BESTUUR - agile scrum master (medior) - OVO001835.docx  Recht om te vertegenwoordigen - Johan Tré BV - Agentschap voor Hoger Onderwijs, Volwassenonderwijs, Kwalificaties en Studietoelagen (afdeling AHOVOKS) - Scrummaster-Agile Coach - AHO000095.docx  Recht om te vertegenwoordigen - Johan Tré BV - BMW Financial Services - Agile Master - BMW007.docx  Recht om te vertegenwoordigen - Johan Tré BV - Digipolis Antwerpen - Raamovereenkomst Agile Scrum Master (Senior) - DIGI000155.docx  Recht om te vertegenwoordigen - Johan Tré BV - Fluvius - Ervaren Scrummaster - FLU003094.docx  Recht om te vertegenwoordigen - Johan Tré BV - Fluvius - Ervaren Scrummaster - FLU003134.docx  Recht om te vertegenwoordigen - Johan Tré BV - Fluvius - Ervaren Scrummaster - FLU003136.docx  (+1 more)
res/: Offers.xlsx  (+5 more)
(+65 files in other folders)
