[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "msword-properties-generator"
version = "0.1.0"
description = "A tool for generating MSWord documents with properties from a database"
authors = [
    {name = "Johan Tré", email = "johan.tre@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "python-docx>=1.1.2",
    "dropbox>=12.0.2",
    "google-api-python-client>=2.166.0",
    "cryptography>=44.0.2",
    "python-dotenv>=1.0.1",
    "pillow>=11.2.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["msword_properties_generator*"]